# stakhanov

./: .gclient  .gitattributes  .gitignore  README.md
src/: .hg  CMakeLists.txt  DEPS  stakhanov_config.json
src/base/: CMakeLists.txt  filesystem_utils.cc  filesystem_utils.h  filesystem_utils_win.cc  filesystem_utils_win.h  init_logging.cc  init_logging.h  interface.cc  interface.h  redis_client_pool.cc  redis_client_pool.h  redis_key_prefixes.cc  redis_key_prefixes.h  redis_key_scanner.cc  redis_key_scanner.h  scoped_handle.h  sthook_constants.cc  sthook_constants.h  string_utils.cc  string_utils.h  timed_block.h
src/stclean/: CMakeLists.txt  main.cc  stclean.ver
src/stexecutor/: CMakeLists.txt  build_directory_state.cc  build_directory_state.h  command_info.h  cumulative_execution_response_builder.cc  cumulative_execution_response_builder.h  distributed_files_storage.cc  distributed_files_storage.h  dll_injector.cc  dll_injector.h  executed_command_info.h  executing_engine.cc  executing_engine.h  executor_factory.cc  executor_factory.h  executor_impl.cc  executor_impl.h  file_hash.cc  file_hash.h  files_filter.cc  files_filter.h  files_storage.h  filesystem_files_storage.cc  filesystem_files_storage.h  get_load_library_addr.cc  get_ntdll_proc32.cc  in_memory_rules_mapper.cc  in_memory_rules_mapper.h  main.cc  outputs_filter.cc  outputs_filter.h  process_creation_request.cc  process_creation_request.h  process_creation_response.cc  process_creation_response.h  process_management_config.cc  process_management_config.h  redis_client_pool.cc  redis_client_pool.h  redis_key_prefixes.cc  (+4 more)
src/stexecutor/rules_mappers/: cached_execution_response.h  file_info.h  file_set.cc  file_set.h  in_memory_request_results.cc  in_memory_request_results.h  in_memory_rules_mapper.cc  in_memory_rules_mapper.h  redis_request_results.cc  redis_request_results.h  redis_rules_mapper.cc  redis_rules_mapper.h  request_results_base.cc  request_results_base.h  rules_hashing.h  rules_mapper.h  rules_mapper_base.cc  rules_mapper_base.h
src/stexecutorlib/: CMakeLists.txt  distributed_files_storage.cc  distributed_files_storage.h  file_hash.cc  file_hash.h  files_storage.h  filesystem_files_storage.cc  filesystem_files_storage.h  redis_key_prefixes.cc  redis_key_prefixes.h
src/sthook/: CMakeLists.txt  dllmain.cc  functions_interceptor.cc  functions_interceptor.h  intercept_helper.cc  intercept_helper.h  intercepted_functions.cc  intercepted_functions.h  process_proxy_manager.cc  process_proxy_manager.h  reading_pipe.cc  reading_pipe.h  std_handles_holder.cc  std_handles_holder.h  stexecutor.thrift  sthook.ver  sthook_communication.cc  sthook_communication.h
src/stlaunch/: CMakeLists.txt  stlaunch.cc  stlaunch.ver
src/stproxy/: CMakeLists.txt  main.cc  stproxy.ver  stproxy_communication.h
src/test_build/: launcher.py  main.cc  reset_exit_code.bat  test.bat
src/tools/: stat_keys.py
